--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="/image1.jpg" class="d-block w-100 img-fluid" alt="...">
+                        <img src="./image1.jpg" class="d-block w-100 img-fluid" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="/image2.jpg" class="d-block w-100 img-fluid" alt="...">
+                        <img src="./image2.jpg" class="d-block w-100 img-fluid" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="/image3.jpg" class="d-block w-100 img-fluid" alt="...">
+                        <img src="./image3.jpg" class="d-block w-100 img-fluid" alt="...">
                       </div>
                     </div> 
                   </div>
