--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Document</title>
+    <title>The Band!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 </head>
@@ -55,7 +55,7 @@
                             <li>Glasgow - 15th Feb</li>
                         </ul>
                     </div>
-                    
+                    <!--Embed Video-->
                     <div class="col-md-8">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/db9UrIhufUw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
@@ -64,6 +64,7 @@
             </div>    
         </main>
 
+        <!--Footer-->
     <footer class="footer bg-light mt-4 pt-4 pb-4">
         <div class="container bg-light">
             <p>&copy; 2020</p>
