--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         </main>
 
         <!--Footer-->
-    <footer class="footer bg-light mt-4 pt-4 pb-4">
-        <div class="container bg-light">
+    <footer class="footer bg-danger pt-4 pt-4 pb-4">
+        <div class="container">
             <p>&copy; 2020</p>
         </div>
         
