Updated Video Ratio

--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
                     </div>
                     <!--Embed Video-->
                     <div class="col-md-8">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/db9UrIhufUw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                        <div class="ratio ratio-16x9">
+                          <iframe src="https://www.youtube.com/embed/db9UrIhufUw" title="YouTube video" allowfullscreen></iframe>
                         </div>
+
+                    </div>
                 </div>
                 </div>
             </div>    
